--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "autoprefixer": "10.4.23",
     "eslint": "9.39.2",
     "eslint-config-next": "16.1.1",
-    "next": "16.1.1",
-    "postcss": "8.5.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "tailwindcss": "4.1.18",
+    "next": "^13.4.19",
+    "postcss": "^8.4.31",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.9.3"
   }
 }
